Modify configure file.

--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,4 @@
                                                                 -*- outline -*-
 
-New in 0.1, kws-bezier-optimizer:
+New in 0.1, kws-hash-optimizer:
 * First release.
